--- a/client/src/scss/components/_modal.scss
+++ b/client/src/scss/components/_modal.scss
@@ -1,5 +1,5 @@
 .modal-dialog--gridfield-delete-relations {
-  @media (min-width: 544px) {
-    max-width: 75%;
+  @media (min-width: 900px) {
+    max-width: 900px;
   }
 }
